Fix first and last page out of bound issue in prediction result page.

--- a/css/pimixture.css
+++ b/css/pimixture.css
@@ -303,6 +303,7 @@ fieldset.well .form-group {
     color: white;
 }
 
+.disabledPageNav,
 .pageNav {
     padding: 2px 2px 2px 5px;
 }
